tests/error/undefined_variable.src
.IPPcode18
defvar GF@a
move GF@a GF@a